# sdd-cash-manager

./: .dcignore  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  GEMINI.md  NONFUNCTIONALS.md  PROJECT_CONSTITUTION.md  PROJECT_SPECIFICATION.md  README.md  TECHNICAL.md  analysis_report.md  cleanup.sh  consistency_report.md  init.sh  install.sh  pyproject.toml  sonar-project.properties
.aider/commands/: speckit.plan.md
.codex/: AGENTS.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.gemini/: settings.json
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.sonarlint/: connectedMode.json
.specify/: integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: create-new-feature.sh
.specify/workflows/: workflow-registry.json
@.codex/: AGENTS.md
docs/: architecture.md  architecture_patterns.md  core_business_logic.md  data-model.md  security_validation.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.spec.tsx  App.tsx  main.tsx  types.ts
frontend/src/components/common/: TabBar.tsx
frontend/src/components/guidance/: DiscrepancyInsight.tsx
frontend/src/components/ledger/: AccountTree.tsx  LedgerToolbar.tsx  Register.tsx
frontend/src/components/reconciliation/: SessionControls.tsx  UnreconciledList.tsx
frontend/src/features/: insight.spec.tsx  ledger.spec.tsx  ledger.tsx  reconciliation.spec.tsx  reconciliation.tsx
frontend/src/hooks/: useReconciliationViewModel.ts  useSplitPane.ts  useVirtualizedList.ts
frontend/src/services/: apiClient.ts
frontend/src/stores/: ledgerStore.ts  reconciliationStore.ts
frontend/src/styles/: layout.css
frontend/tests/ui/: example.spec.ts  ledger.spec.ts  playwright.config.ts  reconciliation.spec.ts
performance-tests/: locustfile.py
scripts/: benchmark_account_workflow.py  check-health.sh  check_layer_boundaries.py  cleanup.sh  db-backup.sh  db-restore.sh  install.sh  move-venv.sh  pre_commit_checks.sh  pre_feature.sh  pre_push_checks.sh  run_api_tests.sh
specs/: NONFUNCTIONALS.md  PROJECT_SPECIFICATION.md  TECHNICAL.md
specs/001-account-management/: data-model.md  nfr_verification.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  threat_model.md
specs/001-account-management/checklists/: consistency_clarity.md  requirements.md  security_data_integrity.md
specs/001-account-management/contracts/: public_api.md
specs/002-add-api-pytests/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-add-api-pytests/checklists/: requirements.md
specs/002-add-api-pytests/contracts/: api-contract.md
specs/003-adjust-balance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-adjust-balance/checklists/: requirements.md
specs/004-transaction-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-transaction-management/checklists/: requirements.md
specs/004-transaction-management/contracts/: transaction-management-api.md  transaction-management.yaml
specs/005-add-reconcile-window/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-add-reconcile-window/checklists/: requirements.md
specs/005-add-reconcile-window/contracts/: reconcile.yaml
specs/006-ui-makeover/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-ui-makeover/checklists/: requirements.md
specs/006-ui-makeover/contracts/: accounts.md  ui-reconciliation.yaml
specs/feature/003-adjust-balance/: spec.md
src/: main.py
src/sdd_cash_manager/: database.py  main.py
src/sdd_cash_manager/api/: accounts.py
src/sdd_cash_manager/api/v1/endpoints/: adjustment.py  reconcile_window.py  reconciliation.py
src/sdd_cash_manager/core/: config.py
src/sdd_cash_manager/lib/: auth.py  encryption.py  exceptions.py  logging_config.py  security_events.py  state_management.py  utils.py  validation.py
src/sdd_cash_manager/models/: __init__.py  account.py  account_merge_plan.py  adjustment.py  duplicate_candidate.py  enums.py  quickfill_template.py  reconciliation.py  reconciliation_session.py  transaction.py
src/sdd_cash_manager/schemas/: account_schema.py  adjustment.py  reconciliation.py  reconciliation_schema.py  transaction_schema.py
src/sdd_cash_manager/services/: account_service.py  adjustment_service.py  reconciliation_service.py  transaction_service.py
tests/: __init__.py  conftest.py
tests/1_unit/: test_account_model.py  test_account_service.py  test_database.py  test_transaction_model.py
tests/2_security/: test_api_security.py
tests/3_integration/: test_account_api.py
tests/api/: README.md  __init__.py  conftest.py  fixtures.py  helpers.py  jwt_utils.py  test_accounts.py  test_duplicates.py  test_quickfill.py  test_transactions.py  test_validation.py
tests/features/: placeholder.feature
tests/integration/: conftest.py  test_account_api.py  test_adjustment_api.py  test_adjustment_reconciliation_flow.py  test_reconciliation_api.py
tests/security/: test_api_security.py
tests/unit/: test_account_model.py  test_account_service.py  test_accounts_api.py  test_adjustment.py  test_auth_events.py  test_config.py  test_coverage_markers.py  test_database.py  test_financial_accuracy.py  test_lib_auth.py  test_lib_encryption.py  test_main_module.py  test_reconciliation.py  test_security_events.py  test_state_management.py  test_transaction_model.py  test_transaction_service.py  test_utils.py
