[project]
name = "sdd-cash-manager"
version = "0.5.0"
description = "A project for managing cash movements and reconciliation."
authors = [
    { name = "Stephan Borg", email = "wolffborg1@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13.0"
packages = [{include = "sdd_cash_manager", from = "src"}]
include = [
    "config/*",
    "docs/*",
    "CHANGELOG.md",
    "poetry.lock",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


dependencies = [
    "fastapi>=0.128.0,<0.137.0",
    "uvicorn (>=0.23.0,<0.27.0)",
    "httpx>=0.27.0,<0.30.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "python-accounting>=1.0.1",
    "sqlalchemy>=2.0.23,<2.2",
    "cryptography (>=46.0.5,<49.0.0)",
    "poetry>=2.3.2",
    "pytest-cov>=7.0.0",
    "pyjwt (>=2.9.0,<3.0.0)",
]

[dependency-groups]
docs = [
    "pdoc (>=16.0.0,<17.0.0)",
]

dev = [
    "commitizen>=4.11.0,<5.0.0",
    "snakeviz>=2.2.2,<3.0.0",
    "locust (>=2.43.3,<3.0.0)",
]

tests = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-mock>=3.15.1,<4.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "behave>=1.3.3,<2.0.0",
    "rapidfuzz>=3.14.3,<4.0.0",
    "jaraco.classes>=3.4.0,<4.0.0",
    "jaraco.context>=6.1.1,<7.0.0",
    "jaraco.functools>=4.4.0,<5.0.0",
    "pytest-httpx>=0.24.0,<1.0.0",
    "httpx>=0.27.0,<0.32.0",
]

lint = [
    "types-requests>=2.32.4.20250913,<3.0.0",
    "types-pyyaml>=6.0.12.20250915,<7.0.0",
    "mypy>=1.19.1,<3.0.0",
    "pyright>=1.1.407,<2.0.0",
    "ruff>=0.14.10,<1.0.0",
    "pymarkdownlnt>=0.9.35",
]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = true
reportUnusedVariable = "error"
reportUnusedImport = "none" # ruff handles this
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportOptionalMemberAccess = "warning"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = false
extraPaths = ["src", "scripts"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true
show_error_codes = true
ignore_missing_imports = false
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
plugins = [
  "pydantic.mypy"
]
exclude = [
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "I", "S110", "N"]
ignore = [
    "E501",    # line too long — handled by formatter
    "C901",    # complexity — legacy monolithic functions
    "N805",    # Pydantic @field_validator uses cls by convention, not self
    "N999",    # module names — project uses camelCase for some files
    "PLC0415", # top-level imports — project uses local imports for dynamic loading
]
exclude = [
    ".venv",
    ".git",
    "docs",
    "build",
    "dist",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "env",
    "ENV",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    "*.log",
    ".env*",
    "node_modules",
    "*.lock",
    "*.json",
    "*.md",
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "N806"]  # assertions OK in tests; PascalCase vars used for mock/session factories

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = [".", "src/sdd_cash_manager"]  # "." lets tests use `from src.sdd_cash_manager import …`; "src/pyArchimate" lets readers/writers use bare `from pyArchimate import …` fallbacktestpaths = ["./tests/unit", "./tests/security", "./tests/integration", "./tests/api"]
python_files = "*_test.py test_*.py *_spec.py"
testpaths = ["./tests/unit", "./tests/security", "./tests/integration", "./tests/api"]
addopts = """
 --cov=src
 --cov-report=xml:build/coverage.xml
 --cov-report=term-missing
--junitxml=build/unit-tests.xml
"""
cache_dir = "/tmp/.pytest_cache"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "build/coverage-reports"

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.behave]
paths = [
    "tests/features/"
]
tags = ["~@wip"]

[tool.pymarkdown]
# MD010 - no hard tabs
plugins.md010.enabled = true
# MD007 - unordered list indentation
plugins.md007.indent = 4
# MD004 - unordered list style
plugins.md004.style = "dash"

[tool.pymarkdown.plugins.md013]
line_length = 120

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.6.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
